# evm-simulator

./: Cargo.toml  README.md  rustfmt.toml
programs/: add.asm
src/: main.rs
src/telemetry/: mod.rs
