[package]
name = "evm-simulator"
version = "0.1.0"
authors = ["Tim Clancy <tim-clancy.eth>"]
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
